# LongNumber

./: CMakeLists.txt  README.md  longnum.cpp  longnum.hpp
src/: CMakeLists.txt  Helpers.cpp  Helpers.h  LongNumber.cpp  LongNumber.h  pi.cpp
tests/: CMakeLists.txt
tests/ut/: TestComparison.cpp  TestDivision.cpp  TestFromString.cpp  TestHelpers.cpp  TestMultiply.cpp  TestShift.cpp  TestSub.cpp  TestSum.cpp  TestToDecimal.cpp
